--- a/llm_langchain.ipynb
+++ b/llm_langchain.ipynb
@@ -535,9 +535,121 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bb5af936-da6b-40a7-a05a-46cb202ebef8",
+   "metadata": {},
+   "source": [
+    "### Simple Chains"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "c51835d8-fb03-44c6-ad67-4ec2e15d295c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new LLMChain chain...\u001b[0m\n",
+      "Prompt after formatting:\n",
+      "\u001b[32;1m\u001b[1;3mYou are an experience virologist. Write a few sentences about the following virus \"HSV\" in Indonesian.\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain_openai import ChatOpenAI\n",
+    "from langchain import PromptTemplate\n",
+    "from langchain.chains import LLMChain\n",
+    "\n",
+    "llm = ChatOpenAI()\n",
+    "template = '''You are an experience virologist. Write a few sentences about the following virus \"{virus}\" in {language}.'''\n",
+    "prompt_template = PromptTemplate.from_template(template=template)\n",
+    "\n",
+    "chain = LLMChain(\n",
+    "    llm=llm,\n",
+    "    prompt=prompt_template,\n",
+    "    verbose=True\n",
+    ")\n",
+    "\n",
+    "output = chain.invoke({'virus': 'HSV', 'language': 'Indonesian'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "0615d5c4-5331-4cb4-b8bc-e22e4ac3d83b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'virus': 'HSV', 'language': 'Indonesian', 'text': 'HSV atau virus herpes simpleks adalah virus yang menyebabkan infeksi pada kulit dan selaput lendir. Virus ini dapat menyebabkan luka yang terasa nyeri dan terkadang disertai dengan gejala flu. HSV bisa menyebar melalui kontak langsung dengan luka yang terinfeksi. Meskipun tidak ada obat yang bisa menyembuhkan HSV, pengobatan antiviral dapat membantu mengurangi gejala dan mencegah penyebaran virus.'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "dcb32c90-c28a-4068-adcd-1756f3d0860f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter Country:  Singapore\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new LLMChain chain...\u001b[0m\n",
+      "Prompt after formatting:\n",
+      "\u001b[32;1m\u001b[1;3mWhat is the capital of Singapore?. List the top 3 places to visit in that city. Use bullet points\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "The capital of Singapore is Singapore City.\n",
+      "\n",
+      "Top 3 places to visit in Singapore City:\n",
+      "- Marina Bay Sands\n",
+      "- Gardens by the Bay\n",
+      "- Sentosa Island\n"
+     ]
+    }
+   ],
+   "source": [
+    "template = 'What is the capital of {country}?. List the top 3 places to visit in that city. Use bullet points'\n",
+    "prompt_template = PromptTemplate.from_template(template=template)\n",
+    "\n",
+    "chain = LLMChain(\n",
+    "    llm=llm,\n",
+    "    prompt=prompt_template,\n",
+    "    verbose=True\n",
+    ")\n",
+    "\n",
+    "country = input('Enter Country: ')\n",
+    "output = chain.invoke(country)\n",
+    "print(output['text'])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51c40601-3959-4e9e-a16a-6f28f54b5f3e",
+   "id": "16809b4e-3bb2-4602-b79f-98fb19489531",
    "metadata": {},
    "outputs": [],
    "source": []
