--- a/LangChainAndVectorStoresPinecone.ipynb
+++ b/LangChainAndVectorStoresPinecone.ipynb
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 44,
    "id": "e7a9e8d9-b5ec-4114-b36c-2bba0006192a",
    "metadata": {},
    "outputs": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 43,
    "id": "eba25776",
    "metadata": {},
    "outputs": [
@@ -3469,9 +3469,182 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2c30a15f-5a93-4d67-8a15-84d2b87e4d0c",
+   "metadata": {},
+   "source": [
+    "## Namespaces"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "c6d55acd-1319-4a55-8c55-0e8a954fbb9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'upserted_count': 5}"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# index.describe_index_stats()\n",
+    "index = pc.Index('langchain')\n",
+    "\n",
+    "import random\n",
+    "vectors = [[random.random() for _ in range(1536)] for v in range(5)]\n",
+    "ids = list('abcde')\n",
+    "index.upsert(vectors=zip(ids, vectors))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "90d47458-b4de-43a3-b068-a031f21bd76f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'upserted_count': 3}"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vectors = [[random.random() for _ in range(1536)] for v in range(3)]\n",
+    "ids = list('xyz')\n",
+    "index.upsert(vectors=zip(ids, vectors), namespace='first-namespace')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "e6f17f04-1c9d-45c9-b40f-98b50d81e2d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'upserted_count': 2}"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vectors = [[random.random() for _ in range(1536)] for v in range(3)]\n",
+    "ids = list('aq')\n",
+    "index.upsert(vectors=zip(ids, vectors), namespace='second-namespace')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "91ba13fb-66d5-4888-a5f6-290be0d22d14",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'dimension': 1536,\n",
+       " 'index_fullness': 0.0,\n",
+       " 'namespaces': {'': {'vector_count': 5},\n",
+       "                'first-namespace': {'vector_count': 3},\n",
+       "                'second-namespace': {'vector_count': 2}},\n",
+       " 'total_vector_count': 10}"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "index.describe_index_stats()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "14feecad-9d7a-459e-a85f-45b83c823a12",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'namespace': 'first-namespace', 'usage': {'read_units': 1}, 'vectors': {}}"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# get specific namespace\n",
+    "index.fetch(ids=['x'], namespace='first-namespace')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "b3534d07-7f9a-4b00-af3f-110de65bb33b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# delete specific id in namespace\n",
+    "index.delete(ids=['x'], namespace='first-namespace')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "540bd70d-1729-4f2d-883d-57ffd6748598",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# delete namespace\n",
+    "index.delete(delete_all=True, namespace='first-namespace')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d3eae00-5c17-4498-93df-7958e68b54cc",
+   "id": "fdeff1dc-0cee-4044-b342-25f67e34beab",
    "metadata": {},
    "outputs": [],
    "source": []
