--- a/ProjectRAG/RAGProject.ipynb
+++ b/ProjectRAG/RAGProject.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "5de830de-8f2b-4395-acdf-dffa03f3aacf",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
        "True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "7088f59a-1f01-430a-9158-bdd408bd9038",
    "metadata": {},
    "outputs": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "8be58554-a3d5-4833-b621-db93b3475d81",
    "metadata": {},
    "outputs": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "7930165c-2066-4e20-9b82-f3062fe488ca",
    "metadata": {},
    "outputs": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "f1478c92-ac72-4eed-96cc-c1cfe243f3cd",
    "metadata": {},
    "outputs": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "ae9636c8-8a5d-4ca7-813c-5f1973d2c428",
    "metadata": {},
    "outputs": [],
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "1b01c39d-d2c9-4d77-87ee-c86701ece29c",
    "metadata": {},
    "outputs": [],
@@ -161,19 +161,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "id": "c9b4abf8-8845-4477-9163-135532808e39",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total Tokens: 16711\n",
-      "Embedding Cost in USD: 0.042613\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def print_embedding_cost(texts):\n",
     "    import tiktoken\n",
@@ -181,9 +172,7 @@
     "    total_tokens = sum([len(enc.encode(page.page_content)) for page in texts])\n",
     "    # check prices here: https://openai.com/pricing\n",
     "    print(f'Total Tokens: {total_tokens}')\n",
-    "    print(f'Embedding Cost in USD: {total_tokens / 1000 * 0.00255:.6f}')\n",
-    "\n",
-    "print_embedding_cost(chunks)"
+    "    print(f'Embedding Cost in USD: {total_tokens / 1000 * 0.00255:.6f}')"
    ]
   },
   {
@@ -196,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "id": "c104babd-9793-4b78-b8a7-4975529843a5",
    "metadata": {},
    "outputs": [],
@@ -230,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "id": "1b14eb5d-adc5-4341-9029-d769e9709fc1",
    "metadata": {},
    "outputs": [],
@@ -260,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "c0c02d7c-70c5-484d-a2fd-b26e047bc362",
    "metadata": {},
    "outputs": [],
@@ -290,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "id": "ea5fedc6-fc4d-45ec-8979-12bb7c5253b8",
    "metadata": {},
    "outputs": [
@@ -337,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "id": "b2787d0a-a45f-49f7-8961-f300328d6904",
    "metadata": {},
    "outputs": [
@@ -398,7 +387,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
+   "id": "d2c699f0-a40f-44f3-b2d8-65c882155106",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total Tokens: 16711\n",
+      "Embedding Cost in USD: 0.042613\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_embedding_cost(chunks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "id": "17bfd6c8-2ff4-4849-a20a-9b7e44384006",
    "metadata": {},
    "outputs": [
@@ -417,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "id": "e07ecca2-b991-4ce6-88fb-68572a053c76",
    "metadata": {},
    "outputs": [
@@ -596,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "id": "31aa72e9-9ad1-4150-ab80-fdc432ba2fb4",
    "metadata": {},
    "outputs": [],
@@ -617,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 31,
    "id": "65e70f1f-21ac-4a74-922e-549eca69884d",
    "metadata": {},
    "outputs": [],
@@ -718,25 +726,183 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9e68805d-1ba6-4cf0-bfd0-d6768b3c3357",
+   "cell_type": "markdown",
+   "id": "2c1dd7b0-cb96-470b-8359-ca88e4ee543a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Adding Memory (Chat History)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "1da3853d-cc7c-44cd-a702-4e44def98607",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from langchain_openai import ChatOpenAI\n",
+    "from langchain.chains import ConversationalRetrievalChain  # Import class for building conversational AI chains \n",
+    "from langchain.memory import ConversationBufferMemory  # Import memory for storing conversation history\n",
+    "\n",
+    "# Instantiate a ChatGPT LLM (temperature controls randomness)\n",
+    "llm = ChatOpenAI(model_name='gpt-3.5-turbo', temperature=0)  \n",
+    "\n",
+    "# Configure vector store to act as a retriever (finding similar items, returning top 5)\n",
+    "retriever = vector_store.as_retriever(search_type='similarity', search_kwargs={'k': 5})  \n",
+    "\n",
+    "\n",
+    "# Create a memory buffer to track the conversation\n",
+    "memory = ConversationBufferMemory(memory_key='chat_history', return_messages=True)\n",
+    "\n",
+    "crc = ConversationalRetrievalChain.from_llm(\n",
+    "    llm=llm,  # Link the ChatGPT LLM\n",
+    "    retriever=retriever,  # Link the vector store based retriever\n",
+    "    memory=memory,  # Link the conversation memory\n",
+    "    chain_type='stuff',  # Specify the chain type\n",
+    "    verbose=False  # Set to True to enable verbose logging for debugging\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "695db368-dcf9-4c86-b7d2-76939f0e006a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ask_question(q, chain):\n",
+    "    result = chain.invoke({'question': q})\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "5e9c5b9b-242d-4bb3-8933-a9aed1c909d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading files/rag_powered_by_google_search.pdf\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = load_document('files/rag_powered_by_google_search.pdf')\n",
+    "chunks = chunk_data(data, chunk_size=256)\n",
+    "vector_store = create_embeddings_chroma(chunks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "878dd0af-274a-4f05-aa80-c874b21766ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'question': 'How many pairs of questions and answers had the StackOverflow dataset?', 'chat_history': [HumanMessage(content='How many pairs of questions and answers had the StackOverflow dataset?'), AIMessage(content='The StackOverflow dataset had 8 million pairs of questions and answers.')], 'answer': 'The StackOverflow dataset had 8 million pairs of questions and answers.'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "q = 'How many pairs of questions and answers had the StackOverflow dataset?'\n",
+    "result = ask_question(q, crc)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "ac673992-d4c7-4992-a56c-7fd7378df1af",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The StackOverflow dataset had 8 million pairs of questions and answers.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(result['answer'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "e9860156-8eb4-498f-ba3d-59d846ebbd9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The result of multiplying 8 million pairs of questions and answers by 10 would be 80 million pairs of questions and answers.\n"
+     ]
+    }
+   ],
+   "source": [
+    "q = 'Multiply that number by 10'\n",
+    "result = ask_question(q, crc)\n",
+    "print(result['answer'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "6c57817a-f8b4-421f-8389-dd26a25de85a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The result of dividing 80 million pairs of questions and answers by 80 is 1 million.\n"
+     ]
+    }
+   ],
+   "source": [
+    "q = 'Devide that result by 80'\n",
+    "result = ask_question(q, crc)\n",
+    "print(result['answer'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "4345bbcd-f9bb-4fe5-9182-bed63332b9f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "content='How many pairs of questions and answers had the StackOverflow dataset?'\n",
+      "content='The StackOverflow dataset had 8 million pairs of questions and answers.'\n",
+      "content='Multiply that number by 10'\n",
+      "content='Multiplying 8 million pairs of questions and answers by 10 would result in 80 million pairs of questions and answers.'\n",
+      "content='Multiply that number by 10'\n",
+      "content='The result of multiplying 8 million pairs of questions and answers by 10 would be 80 million pairs of questions and answers.'\n",
+      "content='Devide that result by 80'\n",
+      "content='The result of dividing 80 million pairs of questions and answers by 80 is 1 million.'\n"
+     ]
+    }
+   ],
+   "source": [
+    "for item in result['chat_history']:\n",
+    "    print(item)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "695db368-dcf9-4c86-b7d2-76939f0e006a",
+   "id": "1586ff39-3dc6-424b-91d9-55303c2640da",
    "metadata": {},
    "outputs": [],
    "source": []
